tweaked sidebar transition shadow timing, plus fixed surrounding shadow around dark mode button

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ main.dark-mode::before {
     margin-top: 12px;
     margin-left: 28px;
     display: none;
-    box-shadow: -2.5px 5px 15px rgb(50, 50, 50);
+    box-shadow: 0px 0px 15px 3px rgb(50, 50, 50);
     opacity: 1;
     transition: 
     margin-top .25s,
@@ -152,9 +152,9 @@ ul#nav-options li a{
     text-shadow: 
     0 5px 5px black;
     transition: 
-    transform .3s ease-in-out,
-    color .3s ease,
-    text-shadow .3s ease-in-out;
+    transform .15s ease-in-out,
+    color .15s ease,
+    text-shadow .15s ease-in-out;
 }
 
 ul#nav-options li a:hover {
@@ -170,9 +170,9 @@ ul#nav-options li a.dark-mode {
     0 0 10px rgba(255, 255, 100, 1),
     0 0 20px rgb(255, 255, 100);
     transition: 
-    color .3s ease-in-out,
-    transform .3s ease-in-out,
-    text-shadow .3s ease-in-out;
+    color .2s ease-in-out,
+    transform .2s ease-in-out,
+    text-shadow .2s ease-in-out;
 }
 
 ul#nav-options li a.dark-mode:hover {
